--- a/crawler/package.json
+++ b/crawler/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "node-cron": "^2.0.3"
+    "node-fetch": "^2.2.0",
+    "puppeteer": "^1.9.0"
   }
 }
