--- a/package.json
+++ b/package.json
@@ -7,6 +7,6 @@
   "author": "Muhibbudin Suretno <muhibbudinsuretno1@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "node-cron": "^2.0.3"
+    "cron": "^1.4.1"
   }
 }
